// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AISuggestionContactReason /> should display feeback message  1`] = `
<div>
  <div
    class="container"
    style="height: 0px; visibility: hidden;"
  >
    <div
      class="collapse"
      style=""
    >
      <div
        class="container"
      >
        <div
          class="avatar"
        >
          <div
            class="component hasImage square"
            style="width: 36px; height: 36px;"
          >
            <div
              class="initials"
              style="width: 36px; height: 36px; font-size: 15px;"
            >
              <span
                style="line-height: 38px;"
              >
                GT
              </span>
            </div>
            <img
              alt="avatar"
              class="gravatar"
              loading="lazy"
              src="/assets/img/icons/gorgias-icon-logo-white.png"
              style="width: 36px; height: 36px;"
            />
          </div>
        </div>
        <header
          class="container"
          style="padding-bottom: 0px;"
        >
          <div
            class="infoContainer"
          >
            <div
              class="title"
            >
              <span>
                Gorgias Tips
              </span>
              <span>
                Only visible to you
              </span>
            </div>
            <span>
              Our AI detected
               
              <b>
                Order - Request
              </b>
               
              as the Contact reason.
            </span>
          </div>
          <div
            class="actionsContainer"
          >
            <div
              class="buttons"
            >
              <span
                class="feedback"
              >
                Thanks for the feedback!
              </span>
            </div>
          </div>
        </header>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AISuggestionContactReason /> should match snapshot for prediction  1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="collapse show"
    >
      <div
        class="container"
      >
        <div
          class="avatar"
        >
          <div
            class="component hasImage square"
            style="width: 36px; height: 36px;"
          >
            <div
              class="initials"
              style="width: 36px; height: 36px; font-size: 15px;"
            >
              <span
                style="line-height: 38px;"
              >
                GT
              </span>
            </div>
            <img
              alt="avatar"
              class="gravatar"
              loading="lazy"
              src="/assets/img/icons/gorgias-icon-logo-white.png"
              style="width: 36px; height: 36px;"
            />
          </div>
        </div>
        <header
          class="container"
          style="padding-bottom: 0px;"
        >
          <div
            class="infoContainer"
          >
            <div
              class="title"
            >
              <span>
                Gorgias Tips
              </span>
              <span>
                Only visible to you
              </span>
            </div>
            <span>
              Our AI detected
               
              <b>
                Order - Request
              </b>
               
              as the Contact reason.
            </span>
          </div>
          <div
            class="actionsContainer"
          >
            <div
              class="buttons"
            >
              <button
                aria-disabled="false"
                class="wrapper fill secondary small"
                type="button"
              >
                <span
                  class="content"
                >
                  Change reason
                </span>
              </button>
              <button
                aria-disabled="false"
                class="wrapper fill primary small"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="material-icons icon small"
                >
                  check_circle
                </i>
                <span
                  class="content"
                >
                  Confirm
                </span>
              </button>
            </div>
          </div>
        </header>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AISuggestionContactReason /> should match snapshot for prediction  2`] = `
<div>
  <div
    class="container"
    style="height: 0px; visibility: hidden;"
  >
    <div
      class="collapsing"
      style="height: 0px;"
    >
      <div
        class="container"
      >
        <div
          class="avatar"
        >
          <div
            class="component hasImage square"
            style="width: 36px; height: 36px;"
          >
            <div
              class="initials"
              style="width: 36px; height: 36px; font-size: 15px;"
            >
              <span
                style="line-height: 38px;"
              >
                GT
              </span>
            </div>
            <img
              alt="avatar"
              class="gravatar"
              loading="lazy"
              src="/assets/img/icons/gorgias-icon-logo-white.png"
              style="width: 36px; height: 36px;"
            />
          </div>
        </div>
        <header
          class="container"
          style="padding-bottom: 0px;"
        >
          <div
            class="infoContainer"
          >
            <div
              class="title"
            >
              <span>
                Gorgias Tips
              </span>
              <span>
                Only visible to you
              </span>
            </div>
            <span>
              Our AI detected
               
              <b>
                Order - Cancel
              </b>
               
              as the Contact reason.
            </span>
          </div>
          <div
            class="actionsContainer"
          >
            <div
              class="buttons"
            >
              <button
                aria-disabled="false"
                class="wrapper fill secondary small"
                type="button"
              >
                <span
                  class="content"
                >
                  Change reason
                </span>
              </button>
              <button
                aria-disabled="false"
                class="wrapper fill primary small"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="material-icons icon small"
                >
                  check_circle
                </i>
                <span
                  class="content"
                >
                  Confirm
                </span>
              </button>
            </div>
          </div>
        </header>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AISuggestionContactReason /> should match snapshot for prediction  3`] = `
<div>
  <div
    class="container"
  >
    <div
      class="collapse show"
    >
      <div
        class="container"
      >
        <div
          class="avatar"
        >
          <div
            class="component hasImage square"
            style="width: 36px; height: 36px;"
          >
            <div
              class="initials"
              style="width: 36px; height: 36px; font-size: 15px;"
            >
              <span
                style="line-height: 38px;"
              >
                GT
              </span>
            </div>
            <img
              alt="avatar"
              class="gravatar"
              loading="lazy"
              src="/assets/img/icons/gorgias-icon-logo-white.png"
              style="width: 36px; height: 36px;"
            />
          </div>
        </div>
        <header
          class="container"
          style="padding-bottom: 0px;"
        >
          <div
            class="infoContainer"
          >
            <div
              class="title"
            >
              <span>
                Gorgias Tips
              </span>
              <span>
                Only visible to you
              </span>
            </div>
            <span>
              Our AI detected
               
              <b />
               
              as the Contact reason.
            </span>
          </div>
          <div
            class="actionsContainer"
          >
            <div
              class="buttons"
            >
              <button
                aria-disabled="false"
                class="wrapper fill secondary small"
                type="button"
              >
                <span
                  class="content"
                >
                  Change reason
                </span>
              </button>
              <button
                aria-disabled="false"
                class="wrapper fill primary small"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="material-icons icon small"
                >
                  check_circle
                </i>
                <span
                  class="content"
                >
                  Confirm
                </span>
              </button>
            </div>
          </div>
        </header>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AISuggestionContactReason /> should match snapshot for prediction  4`] = `
<div>
  <div
    class="container"
    style="height: 0px; visibility: hidden;"
  >
    <div
      class="collapsing"
      style="height: 0px;"
    >
      <div
        class="container"
      >
        <div
          class="avatar"
        >
          <div
            class="component hasImage square"
            style="width: 36px; height: 36px;"
          >
            <div
              class="initials"
              style="width: 36px; height: 36px; font-size: 15px;"
            >
              <span
                style="line-height: 38px;"
              >
                GT
              </span>
            </div>
            <img
              alt="avatar"
              class="gravatar"
              loading="lazy"
              src="/assets/img/icons/gorgias-icon-logo-white.png"
              style="width: 36px; height: 36px;"
            />
          </div>
        </div>
        <header
          class="container"
          style="padding-bottom: 0px;"
        >
          <div
            class="infoContainer"
          >
            <div
              class="title"
            >
              <span>
                Gorgias Tips
              </span>
              <span>
                Only visible to you
              </span>
            </div>
            <span>
              Our AI detected
               
              <b>
                Order - Request
              </b>
               
              as the Contact reason.
            </span>
          </div>
          <div
            class="actionsContainer"
          >
            <div
              class="buttons"
            >
              <button
                aria-disabled="false"
                class="wrapper fill secondary small"
                type="button"
              >
                <span
                  class="content"
                >
                  Change reason
                </span>
              </button>
              <button
                aria-disabled="false"
                class="wrapper fill primary small"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="material-icons icon small"
                >
                  check_circle
                </i>
                <span
                  class="content"
                >
                  Confirm
                </span>
              </button>
            </div>
          </div>
        </header>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AISuggestionContactReason /> should match snapshot for prediction  5`] = `
<div>
  <div
    class="container"
    style="height: 0px; visibility: hidden;"
  >
    <div
      class="collapsing"
      style="height: 0px;"
    >
      <div
        class="container"
      >
        <div
          class="avatar"
        >
          <div
            class="component hasImage square"
            style="width: 36px; height: 36px;"
          >
            <div
              class="initials"
              style="width: 36px; height: 36px; font-size: 15px;"
            >
              <span
                style="line-height: 38px;"
              >
                GT
              </span>
            </div>
            <img
              alt="avatar"
              class="gravatar"
              loading="lazy"
              src="/assets/img/icons/gorgias-icon-logo-white.png"
              style="width: 36px; height: 36px;"
            />
          </div>
        </div>
        <header
          class="container"
          style="padding-bottom: 0px;"
        >
          <div
            class="infoContainer"
          >
            <div
              class="title"
            >
              <span>
                Gorgias Tips
              </span>
              <span>
                Only visible to you
              </span>
            </div>
            <span>
              Our AI detected
               
              <b>
                Order - Request
              </b>
               
              as the Contact reason.
            </span>
          </div>
          <div
            class="actionsContainer"
          >
            <div
              class="buttons"
            >
              <button
                aria-disabled="false"
                class="wrapper fill secondary small"
                type="button"
              >
                <span
                  class="content"
                >
                  Change reason
                </span>
              </button>
              <button
                aria-disabled="false"
                class="wrapper fill primary small"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="material-icons icon small"
                >
                  check_circle
                </i>
                <span
                  class="content"
                >
                  Confirm
                </span>
              </button>
            </div>
          </div>
        </header>
      </div>
    </div>
  </div>
</div>
`;
